# commitchi

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: repository.rs
crates/pet/: Cargo.toml
crates/pet/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: animation.rs  app.rs  bindings.rs  config.rs  events.rs  hooks.rs  main.rs  sprite.rs  ui.rs  watch.rs
docs/: ARCHITECTURE.md  DEV_HARNESS.md  HANDOFF.md  PRD.md  ROADMAP.md
