[workspace]
members = [
    "crates/core",
    "crates/pet",
    "crates/tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1pizzaslice/commitchi"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.28"
git2 = { version = "0.20", default-features = false }
notify = "8.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
toml = "0.8"
