[package]
name = "commitchi-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "commitchi"
path = "src/main.rs"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
commitchi-core = { path = "../core" }
commitchi-pet = { path = "../pet" }
crossterm.workspace = true
notify.workspace = true
ratatui.workspace = true
thiserror.workspace = true

[dev-dependencies]
git2.workspace = true
tempfile.workspace = true
